# imageviewer

./: .gitignore  .pdm-python  README.md  pyproject.toml  run.py
src/image_manager/: config.py  image_utils.py  main_window.py
src/image_manager/widgets/: folder_selection_dialog.py  image_viewer.py  thumbnail_gallery.py
